--- a/restaurant/web/index.html
+++ b/restaurant/web/index.html
@@ -32,6 +32,31 @@
   <title>restaurant</title>
   <link rel="manifest" href="manifest.json">
 
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+    apiKey: "AIzaSyDw9onzTUaI7kJee7UpxGi2Tqbvk-huswo",
+    authDomain: "tp-flutter-e743b.firebaseapp.com",
+    projectId: "tp-flutter-e743b",
+    storageBucket: "tp-flutter-e743b.appspot.com",
+    messagingSenderId: "678909221405",
+    appId: "1:678909221405:web:d5e62c99327d8fec7484f4",
+    measurementId: "G-QYV48KQ7QP"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
+
+  </script>
+
   <script>
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = null;
